--- a/src/Dotnet/UI/AIPlayground.UI/AIPlayground.UI.csproj
+++ b/src/Dotnet/UI/AIPlayground.UI/AIPlayground.UI.csproj
@@ -61,4 +61,9 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\AIPlayground.UI.Configuration\AIPlayground.UI.Configuration.csproj" />
+	  <ProjectReference Include="..\AIPlayground.UI.PresentationLayer\AIPlayground.UI.PresentationLayer.csproj" />
+	</ItemGroup>
+
 </Project>
