--- a/src/Dotnet/UI/AIPlayground.UI.PresentationLayer/AIPlayground.UI.PresentationLayer.csproj
+++ b/src/Dotnet/UI/AIPlayground.UI.PresentationLayer/AIPlayground.UI.PresentationLayer.csproj
@@ -27,6 +27,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<MauiXaml Update="Views\AIDemoList.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="Views\ChatGptPrompt.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
