--- a/src/Dotnet/Api/AIPlayground.Api.PresentationLayer/AIPlayground.Api.PresentationLayer.csproj
+++ b/src/Dotnet/Api/AIPlayground.Api.PresentationLayer/AIPlayground.Api.PresentationLayer.csproj
@@ -1,14 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\AIPlayground.Api.ApplicationLayer\AIPlayground.Api.ApplicationLayer.csproj" />
-    <ProjectReference Include="..\AIPlayground.Api.Domain\AIPlayground.Api.Domain.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
 
-  <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\AIPlayground.Api.ApplicationLayer\AIPlayground.Api.ApplicationLayer.csproj" />
+		<ProjectReference Include="..\AIPlayground.Api.Domain\AIPlayground.Api.Domain.csproj" />
+	</ItemGroup>
+
+	<PropertyGroup>
+		<TargetFramework>net10.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
 </Project>
